# Service_HUB_API

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml  requirements.txt  run.py
alembic/: env.py
alembic/versions/: 001_initial_tables.py
app/: main.py
app/api/: exception_handlers.py
app/api/dependencies/: auth.py  database.py
app/api/routers/: admin.py  auth.py  bookings.py  services.py  users.py
app/api/schemas/: auth_schema.py  booking_schema.py  pagination.py  service_schema.py  user_schema.py
app/application/dto/: booking_dto.py  mappers.py  service_dto.py  user_dto.py
app/application/interfaces/: unit_of_work.py
app/application/use_cases/auth/: login.py  register.py
app/application/use_cases/booking/: accept_booking.py  cancel_booking.py  create_booking.py
app/application/use_cases/service/: create_service.py  list_services.py
app/core/config/: settings.py
app/core/logging/: logger.py
app/core/middleware/: correlation_id.py
app/core/security/: permissions.py
app/domain/: exceptions.py
app/domain/entities/: base.py  booking.py  file_upload.py  review.py  service.py  user.py
app/domain/repositories/: booking_repository.py  service_repository.py  user_repository.py
app/domain/value_objects/: booking_status.py  email.py  role.py
app/infrastructure/auth/: jwt_service.py  password_service.py
app/infrastructure/database/: engine.py  session.py  unit_of_work.py
app/infrastructure/repositories/: booking_repository_impl.py  service_repository_impl.py  user_repository_impl.py
tests/: test_middleware.py
(+11 files in other folders)
